@@ -43,6 +43,13 @@
 #include <sys/uio.h>
 #include "kcapi_aio.h"
 
+#if __GNUC__ >= 4 && DSO
+# define DSO_PUBLIC __attribute__ ((visibility ("default")))
+# pragma GCC visibility push(hidden)
+#else
+# define DSO_PUBLIC
+#endif
+
 /**
  * Flags for the encrypt / decrypt operations
  * 
@@ -90,6 +97,7 @@ struct kcapi_handle;
  *	   -EINVAL - accept syscall failed
  *	   -ENOMEM - cipher handle cannot be allocated
  */
+DSO_PUBLIC
 int kcapi_cipher_init(struct kcapi_handle **handle, const char *ciphername,
 		      uint32_t flags);
 
@@ -97,6 +105,7 @@ int kcapi_cipher_init(struct kcapi_handle **handle, const char *ciphername,
  * kcapi_cipher_destroy() - close the cipher handle and release resources
  * @handle: cipher handle to release - input
  */
+DSO_PUBLIC
 void kcapi_cipher_destroy(struct kcapi_handle *handle);
 
 /**
@@ -114,6 +123,7 @@ void kcapi_cipher_destroy(struct kcapi_handle *handle);
  * Return: 0 upon success;
  *	   < 0 in case of error
  */
+DSO_PUBLIC
 int kcapi_cipher_setkey(struct kcapi_handle *handle,
 			const uint8_t *key, uint32_t keylen);
 
@@ -134,14 +144,15 @@ int kcapi_cipher_setkey(struct kcapi_handle *handle,
  * the plaintext is overwritten with the ciphertext.
  *
  * The memory should be aligned at the page boundary using
- * posix_memalign(sysconf(_SC_PAGESIZE)), If it is not aligned at the page boundary,
- * the vmsplice call may not send all data to the kernel.
+ * posix_memalign(sysconf(_SC_PAGESIZE)), If it is not aligned at the page
+ * boundary, the vmsplice call may not send all data to the kernel.
  *
  * The IV buffer must be exactly kcapi_cipher_ivsize() bytes in size.
  *
  * Return: number of bytes encrypted upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_cipher_encrypt(struct kcapi_handle *handle,
 			     const uint8_t *in, uint32_t inlen,
 			     const uint8_t *iv,
@@ -164,14 +175,15 @@ int32_t kcapi_cipher_encrypt(struct kcapi_handle *handle,
  * the ciphertext is overwritten with the plaintext.
  *
  * The memory should be aligned at the page boundary using
- * posix_memalign(sysconf(_SC_PAGESIZE)), If it is not aligned at the page boundary,
- * the vmsplice call may not send all data to the kernel.
+ * posix_memalign(sysconf(_SC_PAGESIZE)), If it is not aligned at the page
+ * boundary, the vmsplice call may not send all data to the kernel.
  *
  * The IV buffer must be exactly kcapi_cipher_ivsize() bytes in size.
  *
  * Return: number of bytes decrypted upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_cipher_decrypt(struct kcapi_handle *handle,
 			     const uint8_t *in, uint32_t inlen,
 			     const uint8_t *iv,
@@ -205,6 +217,7 @@ int32_t kcapi_cipher_decrypt(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_cipher_stream_init_enc(struct kcapi_handle *handle,
 				     const uint8_t *iv,
 				     struct iovec *iov, uint32_t iovlen);
@@ -236,6 +249,7 @@ int32_t kcapi_cipher_stream_init_enc(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_cipher_stream_init_dec(struct kcapi_handle *handle,
 				     const uint8_t *iv,
 				     struct iovec *iov, uint32_t iovlen);
@@ -271,6 +285,7 @@ int32_t kcapi_cipher_stream_init_dec(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_cipher_stream_update(struct kcapi_handle *handle,
 				   struct iovec *iov, uint32_t iovlen);
 
@@ -295,6 +310,7 @@ int32_t kcapi_cipher_stream_update(struct kcapi_handle *handle,
  * Return: number of bytes obtained from the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_cipher_stream_op(struct kcapi_handle *handle,
 			       struct iovec *iov, uint32_t iovlen);
 
@@ -305,6 +321,7 @@ int32_t kcapi_cipher_stream_op(struct kcapi_handle *handle,
  * Return: > 0 specifying the IV size;
  *	   0 on error
  */
+DSO_PUBLIC
 uint32_t kcapi_cipher_ivsize(struct kcapi_handle *handle);
 
 /**
@@ -314,6 +331,7 @@ uint32_t kcapi_cipher_ivsize(struct kcapi_handle *handle);
  * Return: > 0 specifying the block size;
  *	   0 on error
  */
+DSO_PUBLIC
 uint32_t kcapi_cipher_blocksize(struct kcapi_handle *handle);
 
 
@@ -340,6 +358,7 @@ uint32_t kcapi_cipher_blocksize(struct kcapi_handle *handle);
  *	   -EINVAL - accept syscall failed
  *	   -ENOMEM - cipher handle cannot be allocated
  */
+DSO_PUBLIC
 int kcapi_aead_init(struct kcapi_handle **handle, const char *ciphername,
 		    uint32_t flags);
 
@@ -347,6 +366,7 @@ int kcapi_aead_init(struct kcapi_handle **handle, const char *ciphername,
  * kcapi_aead_destroy() - close the AEAD handle and release resources
  * @handle: cipher handle to release - input
  */
+DSO_PUBLIC
 void kcapi_aead_destroy(struct kcapi_handle *handle);
 
 /**
@@ -364,6 +384,7 @@ void kcapi_aead_destroy(struct kcapi_handle *handle);
  * Return: 0 upon success;
  *	   < 0 in case of error
  */
+DSO_PUBLIC
 int kcapi_aead_setkey(struct kcapi_handle *handle,
 		      const uint8_t *key, uint32_t keylen);
 
@@ -378,6 +399,7 @@ int kcapi_aead_setkey(struct kcapi_handle *handle,
  * Return: 0 upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int kcapi_aead_settaglen(struct kcapi_handle *handle, uint32_t taglen);
 
 /**
@@ -391,6 +413,7 @@ int kcapi_aead_settaglen(struct kcapi_handle *handle, uint32_t taglen);
  * data size and may return an error during initialization if the
  * authentication size is not considered appropriate.
  */
+DSO_PUBLIC
 void kcapi_aead_setassoclen(struct kcapi_handle *handle, uint32_t assoclen);
 
 /**
@@ -414,8 +437,8 @@ void kcapi_aead_setassoclen(struct kcapi_handle *handle, uint32_t assoclen);
  * the plaintext is overwritten with the ciphertext.
  *
  * The memory should be aligned at the page boundary using
- * posix_memalign(sysconf(_SC_PAGESIZE)), If it is not aligned at the page boundary,
- * the vmsplice call may not send all data to the kernel.
+ * posix_memalign(sysconf(_SC_PAGESIZE)), If it is not aligned at the page
+ * boundary, the vmsplice call may not send all data to the kernel.
  *
  * The IV buffer must be exactly kcapi_cipher_ivsize() bytes in size.
  *
@@ -430,6 +453,7 @@ void kcapi_aead_setassoclen(struct kcapi_handle *handle, uint32_t assoclen);
  * Return: number of bytes encrypted upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_aead_encrypt(struct kcapi_handle *handle,
 			   uint8_t *in, uint32_t inlen,
 			   const uint8_t *iv,
@@ -459,6 +483,7 @@ int32_t kcapi_aead_encrypt(struct kcapi_handle *handle,
  * provides the consumer with the length of the tag and the length of the
  * ciphertext.
  */
+DSO_PUBLIC
 void kcapi_aead_getdata(struct kcapi_handle *handle,
 			uint8_t *encdata, uint32_t encdatalen,
 			uint8_t **aad, uint32_t *aadlen,
@@ -503,6 +528,7 @@ void kcapi_aead_getdata(struct kcapi_handle *handle,
  * Return: number of bytes decrypted upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_aead_decrypt(struct kcapi_handle *handle,
 			   uint8_t *in, uint32_t inlen,
 			   const uint8_t *iv,
@@ -544,6 +570,7 @@ int32_t kcapi_aead_decrypt(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_aead_stream_init_enc(struct kcapi_handle *handle,
 				   const uint8_t *iv,
 				   struct iovec *iov, uint32_t iovlen);
@@ -584,6 +611,7 @@ int32_t kcapi_aead_stream_init_enc(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_aead_stream_init_dec(struct kcapi_handle *handle,
 				   const uint8_t *iv,
 				   struct iovec *iov, uint32_t iovlen);
@@ -621,6 +649,7 @@ int32_t kcapi_aead_stream_init_dec(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_aead_stream_update(struct kcapi_handle *handle,
 				 struct iovec *iov, uint32_t iovlen);
 
@@ -641,6 +670,7 @@ int32_t kcapi_aead_stream_update(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_aead_stream_update_last(struct kcapi_handle *handle,
 				      struct iovec *iov, uint32_t iovlen);
 
@@ -662,6 +692,7 @@ int32_t kcapi_aead_stream_update_last(struct kcapi_handle *handle,
  * Return: number of bytes obtained from the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_aead_stream_op(struct kcapi_handle *handle,
 			     struct iovec *iov, uint32_t iovlen);
 
@@ -672,6 +703,7 @@ int32_t kcapi_aead_stream_op(struct kcapi_handle *handle,
  * Return: > 0 specifying the IV size;
  *	   0 on error
  */
+DSO_PUBLIC
 uint32_t kcapi_aead_ivsize(struct kcapi_handle *handle);
 
 /**
@@ -681,6 +713,7 @@ uint32_t kcapi_aead_ivsize(struct kcapi_handle *handle);
  * Return: > 0 specifying the block size;
  *	   0 on error
  */
+DSO_PUBLIC
 uint32_t kcapi_aead_blocksize(struct kcapi_handle *handle);
 
 /**
@@ -694,6 +727,7 @@ uint32_t kcapi_aead_blocksize(struct kcapi_handle *handle);
  * Return: > 0 specifying the block size;
  *	   0 on error
  */
+DSO_PUBLIC
 uint32_t kcapi_aead_authsize(struct kcapi_handle *handle);
 
 /**
@@ -705,6 +739,7 @@ uint32_t kcapi_aead_authsize(struct kcapi_handle *handle);
  *
  * Return: minimum size of output data length in bytes
  */
+DSO_PUBLIC
 uint32_t kcapi_aead_outbuflen(struct kcapi_handle *handle,
 			    uint32_t inlen, uint32_t assoclen, uint32_t taglen);
 
@@ -723,6 +758,7 @@ uint32_t kcapi_aead_outbuflen(struct kcapi_handle *handle,
  * Return: 0 upon success;
  *	   < 0 upon failure
  */
+DSO_PUBLIC
 int kcapi_aead_ccm_nonce_to_iv(const uint8_t *nonce, uint32_t noncelen,
 			       uint8_t **iv, uint32_t *ivlen);
 
@@ -746,6 +782,7 @@ int kcapi_aead_ccm_nonce_to_iv(const uint8_t *nonce, uint32_t noncelen,
  *	   -EINVAL - accept syscall failed
  *	   -ENOMEM - cipher handle cannot be allocated
  */
+DSO_PUBLIC
 int kcapi_md_init(struct kcapi_handle **handle, const char *ciphername,
 		  uint32_t flags);
 
@@ -753,6 +790,7 @@ int kcapi_md_init(struct kcapi_handle **handle, const char *ciphername,
  * kcapi_md_destroy() - close the message digest handle and release resources
  * @handle: cipher handle to release - input
  */
+DSO_PUBLIC
 void kcapi_md_destroy(struct kcapi_handle *handle);
 
 /**
@@ -770,6 +808,7 @@ void kcapi_md_destroy(struct kcapi_handle *handle);
  * Return: 0 upon success;
  *	   < 0 in case of error
  */
+DSO_PUBLIC
 int kcapi_md_setkey(struct kcapi_handle *handle,
 		    const uint8_t *key, uint32_t keylen);
 
@@ -782,6 +821,7 @@ int kcapi_md_setkey(struct kcapi_handle *handle,
  * Return: 0 upon success;
  *	   < 0 in case of error
  */
+DSO_PUBLIC
 int32_t kcapi_md_update(struct kcapi_handle *handle,
 			const uint8_t *buffer, uint32_t len);
 
@@ -796,6 +836,7 @@ int32_t kcapi_md_update(struct kcapi_handle *handle,
  * 	   -ENOMEM - buffer is too small for the complete message digest,
  * 	   the buffer is filled with the truncated message digest
  */
+DSO_PUBLIC
 int32_t kcapi_md_final(struct kcapi_handle *handle,
 		       uint8_t *buffer, uint32_t len);
 
@@ -819,6 +860,7 @@ int32_t kcapi_md_final(struct kcapi_handle *handle,
  * 	   -ENOMEM - buffer is too small for the complete message digest,
  * 	   the buffer is filled with the truncated message digest
  */
+DSO_PUBLIC
 int32_t kcapi_md_digest(struct kcapi_handle *handle,
 		       const uint8_t *in, uint32_t inlen,
 		       uint8_t *out, uint32_t outlen);
@@ -834,6 +876,7 @@ int32_t kcapi_md_digest(struct kcapi_handle *handle,
  * Return: > 0 specifying the block size;
  *	   0 on error
  */
+DSO_PUBLIC
 uint32_t kcapi_md_digestsize(struct kcapi_handle *handle);
 
 /**
@@ -843,6 +886,7 @@ uint32_t kcapi_md_digestsize(struct kcapi_handle *handle);
  * Return: > 0 specifying the block size;
  *	   0 on error
  */
+DSO_PUBLIC
 uint32_t kcapi_md_blocksize(struct kcapi_handle *handle);
 
 
@@ -865,6 +909,7 @@ uint32_t kcapi_md_blocksize(struct kcapi_handle *handle);
  *	   -EINVAL - accept syscall failed
  *	   -ENOMEM - cipher handle cannot be allocated
  */
+DSO_PUBLIC
 int kcapi_rng_init(struct kcapi_handle **handle, const char *ciphername,
 		   uint32_t flags);
 
@@ -872,6 +917,7 @@ int kcapi_rng_init(struct kcapi_handle **handle, const char *ciphername,
  * kcapi_rng_destroy() - Close the RNG handle and release resources
  * @handle: cipher handle to release - input
  */
+DSO_PUBLIC
 void kcapi_rng_destroy(struct kcapi_handle *handle);
 
 /**
@@ -891,6 +937,7 @@ void kcapi_rng_destroy(struct kcapi_handle *handle);
  * Return: 0 upon success;
  * 	   < 0 upon error
  */
+DSO_PUBLIC
 int kcapi_rng_seed(struct kcapi_handle *handle, uint8_t *seed,
 		   uint32_t seedlen);
 
@@ -903,6 +950,7 @@ int kcapi_rng_seed(struct kcapi_handle *handle, uint8_t *seed,
  * Return: size of random number generated upon success;
  *	   -EIO - data cannot be obtained
  */
+DSO_PUBLIC
 int32_t kcapi_rng_generate(struct kcapi_handle *handle,
 			   uint8_t *buffer, uint32_t len);
 
@@ -927,6 +975,7 @@ enum kcapi_verbosity {
  *	   LOG_VERBOSE: log verbose messages, warnings and error messages
  *	   LOG_DEBUG: log all details of library operation
  */
+DSO_PUBLIC
 void kcapi_set_verbosity(enum kcapi_verbosity level);
 
 /**
@@ -934,6 +983,7 @@ void kcapi_set_verbosity(enum kcapi_verbosity level);
  * @buf: buffer to place version string into - output
  * @buflen: length of buffer - input
  */
+DSO_PUBLIC
 void kcapi_versionstring(char *buf, uint32_t buflen);
 
 /**
@@ -949,6 +999,7 @@ void kcapi_versionstring(char *buf, uint32_t buflen);
  *
  * Return: Version number of kcapi library
  */
+DSO_PUBLIC
 uint32_t kcapi_version(void);
 
 /**
@@ -969,6 +1020,7 @@ uint32_t kcapi_version(void);
  * Return: 0 for success;
  *	   < 0 for any errors
  */
+DSO_PUBLIC
 int kcapi_pad_iv(struct kcapi_handle *handle,
 		 const uint8_t *iv, uint32_t ivlen,
 		 uint8_t **newiv, uint32_t *newivlen);
@@ -982,6 +1034,7 @@ int kcapi_pad_iv(struct kcapi_handle *handle,
  *
  * The parameters, he logic and the return code is identical to memset(3).
  */
+DSO_PUBLIC
 void kcapi_memset_secure(void *s, int c, uint32_t n);
 
 /**
@@ -1005,6 +1058,7 @@ void kcapi_memset_secure(void *s, int c, uint32_t n);
  *	   -EINVAL - accept syscall failed
  *	   -ENOMEM - cipher handle cannot be allocated
  */
+DSO_PUBLIC
 int kcapi_akcipher_init(struct kcapi_handle **handle, const char *ciphername,
 			uint32_t flags);
 
@@ -1012,6 +1066,7 @@ int kcapi_akcipher_init(struct kcapi_handle **handle, const char *ciphername,
  * kcapi_akcipher_destroy() - close the cipher handle and release resources
  * @handle: cipher handle to release - input
  */
+DSO_PUBLIC
 void kcapi_akcipher_destroy(struct kcapi_handle *handle);
 
 /**
@@ -1042,6 +1097,7 @@ void kcapi_akcipher_destroy(struct kcapi_handle *handle);
  * Return: 0 upon success;
  *	   < 0 in case of error
  */
+DSO_PUBLIC
 int kcapi_akcipher_setkey(struct kcapi_handle *handle,
 			  const uint8_t *key, uint32_t keylen);
 
@@ -1066,6 +1122,7 @@ int kcapi_akcipher_setkey(struct kcapi_handle *handle,
  * Return: 0 upon success;
  *	   < 0 in case of error
  */
+DSO_PUBLIC
 int kcapi_akcipher_setpubkey(struct kcapi_handle *handle,
 			     const uint8_t *key, uint32_t keylen);
 
@@ -1094,6 +1151,7 @@ int kcapi_akcipher_setpubkey(struct kcapi_handle *handle,
  * Return: number of bytes returned by the encryption operation upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_encrypt(struct kcapi_handle *handle,
 			       const uint8_t *in, uint32_t inlen,
 			       uint8_t *out, uint32_t outlen, int access);
@@ -1123,6 +1181,7 @@ int32_t kcapi_akcipher_encrypt(struct kcapi_handle *handle,
  * Return: number of bytes returned by the decryption operation upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_decrypt(struct kcapi_handle *handle,
 			       const uint8_t *in, uint32_t inlen,
 			       uint8_t *out, uint32_t outlen, int access);
@@ -1152,6 +1211,7 @@ int32_t kcapi_akcipher_decrypt(struct kcapi_handle *handle,
  * Return: number of bytes returned by the signature gen operation upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_sign(struct kcapi_handle *handle,
 			    const uint8_t *in, uint32_t inlen,
 			    uint8_t *out, uint32_t outlen, int access);
@@ -1185,6 +1245,7 @@ int32_t kcapi_akcipher_sign(struct kcapi_handle *handle,
  * Return: number of bytes returned by the signature ver operation upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_verify(struct kcapi_handle *handle,
 			      const uint8_t *in, uint32_t inlen,
 			      uint8_t *out, uint32_t outlen, int access);
@@ -1215,6 +1276,7 @@ int32_t kcapi_akcipher_verify(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_stream_init_enc(struct kcapi_handle *handle,
 				       struct iovec *iov, uint32_t iovlen);
 
@@ -1244,6 +1306,7 @@ int32_t kcapi_akcipher_stream_init_enc(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_stream_init_dec(struct kcapi_handle *handle,
 				       struct iovec *iov, uint32_t iovlen);
 
@@ -1273,6 +1336,7 @@ int32_t kcapi_akcipher_stream_init_dec(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_stream_init_sgn(struct kcapi_handle *handle,
 				       struct iovec *iov, uint32_t iovlen);
 
@@ -1303,6 +1367,7 @@ int32_t kcapi_akcipher_stream_init_sgn(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_stream_init_vfy(struct kcapi_handle *handle,
 				       struct iovec *iov, uint32_t iovlen);
 
@@ -1328,6 +1393,7 @@ int32_t kcapi_akcipher_stream_init_vfy(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_stream_update(struct kcapi_handle *handle,
 				     struct iovec *iov, uint32_t iovlen);
 
@@ -1351,6 +1417,7 @@ int32_t kcapi_akcipher_stream_update(struct kcapi_handle *handle,
  * Return: number of bytes sent to the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_stream_update_last(struct kcapi_handle *handle,
 					  struct iovec *iov, uint32_t iovlen);
 
@@ -1376,6 +1443,7 @@ int32_t kcapi_akcipher_stream_update_last(struct kcapi_handle *handle,
  * Return: number of bytes obtained from the kernel upon success;
  *	   < 0 in case of error with errno set
  */
+DSO_PUBLIC
 int32_t kcapi_akcipher_stream_op(struct kcapi_handle *handle,
 			         struct iovec *iov, uint32_t iovlen);
 
